@@ -4,23 +4,13 @@ Hash: SHA256
 AUX jinja-2.6-python3.3.patch 591 SHA256 38a97d3ffc527d9d12dcb6e103b8a214b95d8d554995f095532915e514ef5251 SHA512 430dcb663bc623c639d1863a7e0c0fd8687f601b570ea4df4fd6ddfe1a7e03c63a90bd30fb53c1ecb11fd57fdc92eb451d243be1d46c5135516d992c102a5011 WHIRLPOOL ab2d5e4fd1d769a0019296e65fff5b3323ed47067aaca9e1a6f59e3fd430bb91aa8517e46fdf7ea4e51b973cb35311d3f673b2e9dc7f948d8e8adbe40a8e8336
 AUX jinja-2.7-docs.patch 1945 SHA256 d3299aff0ed48f0b89a7ad07ba092b02696fb85692d30ec569d308e0925744f7 SHA512 5cfb134597eb3d39426a6e79d871d7381d776e9709b3a9f606c2d5772eacfb508105637e95fcab88fbf2705f3997d9d0f92bc85f92c790603c95ca1f096d013a WHIRLPOOL a27f652d0fea41df7e8b079950a1b7c928386dab954e5dab423906a4f97206573b72280c9073cacfd80f90c6ef112c9f1ffabeb45965f187daf4e288040f5eb7
 DIST Jinja2-2.7.3.tar.gz 378470 SHA256 2e24ac5d004db5714976a04ac0e80c6df6e47e98c354cb2c0d82f8879d4f8fdb SHA512 2810db2b52fe800e2a4a47ea41a07f997b1647a2b7ad05fe564f9d554d6a402283c84c4e2491e5dad8d22acd83d3ca420f0983ed2effc732f6d79600a846071b WHIRLPOOL ece9b68dff414739103eac202b5903d96802939f5742a2bf3ff421d87ef49043ed9a4b2a3a6bf0c2f3d9be0d8295b73c47b253553731b44912cb58add8f233c0
-EBUILD jinja-2.7.3.ebuild 1773 SHA256 3881df4616f5fd56e90158f4ce2a5ef89c63667ade39a18da14e921eed966229 SHA512 e8f0d2cbaec87c33d4e07a77b75da1a529225c246b97463dc5189bb307d8b3152e70cb9eff95be571d056988fb73e07d1063567b6f28acaf209a83a491d30ce9 WHIRLPOOL 8c9d540f8e7f7a2741cd80a78ce5235024e4af98a2c777aa04c143428788f3067c1adb48b2915b9f64826a7362be7e464ffdf86b7f01f76cec31167dc4f13388
-MISC ChangeLog 19583 SHA256 30148705f0dae4a9c02c999f7045ef2c8e78f101a52367458cb21fa267d5fea9 SHA512 91f3249c427737fe63f3f042a6ae0b1723245f6591af629bec2f953c93fd3cdb691f865f61266db233a8f93dfb58b9144b2289794779459f3406f1a27909f438 WHIRLPOOL 666c29d100803c39b28b7fe1980307460e9334eaddc77f221fe174e4f8b044062cb8f4e062106ea7e8b55dcbd4e6e38690543f724309f957f76926c4e5d4303f
+EBUILD jinja-2.7.3.ebuild 1803 SHA256 42c44b2ca29a0b89fce9e7dccea0f7cd48ea9656613c7b1f4a8f565088d01d32 SHA512 be1488dcee7d1ccbb498df967c4d91c3bb432f596988017900c46426e9c3c69151e85424884b3deb71f20f7771d2b69674b6907e2d3eee18402f8b820be245ad WHIRLPOOL 64bc6924a42bbb08932de859877dcadd175d14cb927e3851f9e271d70e3e92caace4069dda1f5533cb7441e8c6abee7e512589cf5e50be03eddd0eedf783314f
+MISC ChangeLog 19687 SHA256 0401984b535e828783bf989a2d77580d8f32ffdb48efe6ecdb787f56e293e2b6 SHA512 076651dc5566903196fa608e66648e1186421ceab68eb0a5081c53c8a6fdec8116c79f1e2ffd3dff534b78087f5794eaba7bf1c2ecd9631284605808ae97ac03 WHIRLPOOL 66a6421f922397efb2d08e214ee523d3a15bd8cf7a4cfa5f561c2cd726f54ecabc762e0ce2d09b1eb1eb054b7698c47e24a5255055b5f58f9f555580402fe9e5
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT838jAAoJEJ+WuSkwOAOBUVkQAJwj78R6jR/ZgAkrHqHY3dD+
-7/e0NdtwYS7Driz7VDFD7nTGumxZIYYBr6gfBSXNDTAUggQbkJkmRSj/XEKrOYvE
-+xGfIFT688I/3jxe0blFUl2jhMBqUTqLid4Fdws0xdfvY94LASpR3Vh1z2V+Ece9
-AMo+zYU6WmzCWr8Y4q7nSwODGF7LxPSX77xKCZGiDGl1O5NTJTXkrYHSQjN0eTzS
-tPmfow6P2W0c3hX+iXdmM4mb16ZLv9tQxITqMI7HvV9yt91T8cvTiVjEjTkRvvP9
-a/gyYabpzPzmy2DbuHkW2lulqcG8aV7CxNrIrBS/BtM8ef5XhNgr1d5WLKjcCFPD
-r9zpziPiZNaGumOWQ3a0KiibbGCElK8sLzFHg4dC8Ps6wYzCVZRA0YI/J9FBcQRo
-rVyfxNtSj9evxb4sreLCNTciOYV0r/2UJzH5AePnNQ10dXm2v+LTqlOWPRXAjuIk
-GXMWYEJGRxkvGngqOBCjsnk40JV8ZifW4mxBeKxX6Tb3F9GX90VC6sIwpHnmV+44
-mh60CsA+Pc2Kkqg/mzhSgfvqcDYl9zsSOnI/+sfnaWlk2eT9eoeCPbmQ1CNy9acV
-O9Wrs7V2hXZggRnmJOh1KHzfE22XiAFkzLQxpthuUSlG1MKGUf4yO8p77wfxwXAJ
-i7XQ1xpovuEf4upKR62t
-=25qE
+iF4EAREIAAYFAlPz3lkACgkQC77qH+pIQ6RDUAEAt/eUx5c/Sw45j2r7s8+2qOHO
+QIn+WSZ8AYZwIYegiOUBALssH6zAk5LSf9IoZp1Me67v36MtxEUW11J45m9PPoJx
+=t6ny
 -----END PGP SIGNATURE-----
