@@ -2,28 +2,26 @@
 Hash: SHA256
 
 AUX photo-0.7.1.1-install-desktop.patch 759 SHA256 49932340d5ed1be4979cb5a2c38649f9d8263858a0a0a66d1bb2023b3cdeee42 SHA512 7cbcf2749c181b0b1146bdb37caa2155aefc6d3224532f405c1acdd8cafd0378c2fe3bb2880b33fe2f9081e88cc001532388ea8b4c4f30ffa9841f3c41b42286 WHIRLPOOL 27390a89442e90f853905ea3957289695332adbc7007536a4e99a714058beeaf5fab7252544f8faa5371193b80656100d1b6f486ce9154e6dd24080430ed0646
-DIST 147453-photo-0.7.1.1.tar.gz 343026 SHA256 e93d03208b5be97ac8dd1234fcfa18801521f2a1c24f411db42d5863be487a24
 DIST photo-0.8.tar.gz 241142 SHA256 123f8cfa8e86dd131147b58e1c94a138bb9d3e5873f29b550cc960e83b2c4f5f SHA512 b5b8700a4f15e4ce880c5558247cc0e96e59df21c0674f57e202b5d6474e1ef0a251d5be391e795b230c4959251e194ec4a1c87e75075ee9ae501d3e18c4e32f WHIRLPOOL c6ff5a3a41cdfac0c54593dfbabb35bcb903b592809f698cf7d7c56bce05b1a29c31d8db7031392819481188f563bcf67e997cec24acd0a0842a311efaa76529
-EBUILD photo-0.7.1.1.ebuild 648 SHA256 8088ec1848fb81e74b8ec4fb584b63749f32c8fddf870873a720c6d75d8e042a SHA512 9e3c2f9acbe9e13d4889a99d8137c32b8daa5533356be2f09dad5d4ec06d6527092b51828fbb02a507e2ea9821bf3d7df153ff2c017d46da142e7fa1526a61f9 WHIRLPOOL 0846206b3a7689847cb5e5198abdfb6ead59775f9fe7f90e2a794cd32e3dc995347aa61ca8c216baa96985722c9eebb911c29a1aca55c288948870ab5f56d46b
-EBUILD photo-0.8.ebuild 596 SHA256 a78b10d8b14a772035145349f73aa80ba058fd46bd7eebfeb01aeac9177ff54f SHA512 32c3fdd4a1c1aaf90161f471dd777c00aeb0731011260735afa5e36fe42da1cb989e50c6bf65cf1d04ddfb0ed533cd8d5ec7ddc4417f351620838986982af13f WHIRLPOOL af2a7232b902cba0e47ddac59dea23c200c385b5eaefabdcc1c7af1f20e6725005325d14d68e01b77cc09178950b52ecbe9d327c1dae6f91a7aa07d3792da4eb
-MISC ChangeLog 694 SHA256 5fe4f48eaf43fbec72e579b1fc42ff63f01dbd8ff80a74e7f84815e79a06cb94 SHA512 62e6dadeb66c5676c520b51ddbdf13fce2ecd522fc5a4e310a24eb36018baf4d887a1b5e1fdeb1ae5ef6d95fa2eaae2f65da19fa80acc20cfe87a9cd4fae0af0 WHIRLPOOL 17f4d1a1e16dc567d9f778f2be3e5dc7aca96a5d7c93977478b1129986b4778e130331665d3593e29bac67371ebd36138a719a1de38b2b9cea717fafafeb81b2
+EBUILD photo-0.8-r1.ebuild 621 SHA256 ae80254afd1e816990b409b3f9a1b345d1b12bf10e7c10abe4ed9f0497fce57b SHA512 4406e2e56e9ab004a8807777d4799e3ea830847375d8c7bd4cb0c82bfe867450859600a7ae99d160634b5391c52b956ca0bec11a5c2d233abb00081bd6d383c6 WHIRLPOOL c9b0b893fad159c9771e2c581aea24487b3376baff9a6f52893e8fe8e7f9caf2a1576fe7812ed7c51bb917d594c9d33404dc62351f432bf94a4ed97eb0761fc1
+MISC ChangeLog 914 SHA256 0f0a0af1e4d26762cc309d2bae2ab6e59f2ab304daa0cb946f2bf284e0ef8a85 SHA512 bd5d0eb326b7cdf317da4a62f99f9438f254622e4526c776bc2b33c11d8a282bb68eac3a90105a6bab604f124e48888e2561c225eb90aa918f6b4399cb10a935 WHIRLPOOL f7f3a96931f6fb23ebf332320bce6c5cca7e9f3c55b967aea857e4b7eaabe84487df185576dc18c7c8566ae50365c0f32d25a5315a5589fd06e48d072ee41a8a
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJRMnF1XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88vA8QAMmozsaBWgR506lrucoxu/S/
-wS3V9U38bV9oEATa3Pc6JbaGcB3x6i6xnRo4OuVKB7AJEaRQGGlSa/ev80fGCF6K
-LYzLy77cMTvHB6Iv4rP0FgrOTCoUeDCwqgAjSDHu0lrGP+IcutPNMfap7obtzgdT
-4rQAm/CURlItrkgCtKAWrDN0Bqc3TPKPQH62gkm113krPsjlw/QMENKTvGeLQdHd
-4eUg2R7ld+YnC+r5WNMWYna5CHdTShGRlj64np92VKFAJDlssN02cpW6UxZZXtZi
-qwdfSL6kGQmHAfFzhEpAKphPDvvDOcqZ4fGw4iluX+jkfXXNUIWZDUIwYn2mOS6r
-oUky0mw3Xy740D2uh1qKuej/R9v9tR3LU9WhSrYB4a2Rq0tyuydhYhgKCVFGb43v
-JXNi0E8wKpIWSvOSQST2RT+QPqBflqCEgIN3QVgfvVhUmQJ6mqSGMkTQddaTb8Og
-z1P/fzaViUtc6CTr7fBC99aHNeZ6SGGMcq15hlovE1P6p0i93FKlPdioSFAPNABT
-XpmY9du8OrcNjX7OgWCkeHsO5FHAQid6eniyz7lwdlt+9qTX/Hgr1yxrwWzZACxU
-L3w1rzypZq3xwX0qtAy6heFW+9VOvkcla5V+2rD581buQQXQf/9zUcQ7fD6y11lZ
-CjEabcWVCWtELIIgjoKw
-=n7fd
+iQJ8BAEBCABmBQJT8+M0XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9SV0QAJhq3YQ3sT3wJJ9yv8TdASiv
+fbFc963Z4x0wJuNE1J7EpGX90kkGhu21mIjQA6COwUl78SAn3YnE2f04pDclfMYB
+nKc6mpM4O76LMqT9hfvCm7Ff1b62rLLQ25IUv4O5PUQkVcUZmcdDiHnGB5WHlHYc
+NPOmMR5YqT8t5dX6jxzqSmfkaDYarB3335XmLAwg1Z8FOM/0cwEzUFJySKH0v1O1
+rQTM/r6EjOeYw936hg7vmjumnd1+/WtILmLk4fgzKmcxfbJJxsWi8sJKJRl1D6nD
+5nYpoj97oPnQqmO9/MBI54kDmS6WN1M3kOrxRlpEElQyqzMYWmiZjgWvQbp2CDt+
+632ulqkFvf+1e8mcwkpL0gsyY2QnF6Nxs+ItvLWDFpRWF//i0DJxFiVsoOspIX4v
+cMhxXzoPw/OPTHR9L2Df96XHQaFpP6psI4XYExf7/Y6vboC4seigds6LnM9MsOOU
+NjwcbC19nN7/fTtgOHXxzz3P9viKkQpBHMoaUqGJ9t7ioZmcbkdwAAOMNnZvhDm2
+WuV6Y5Lg9rP5dINYkUzcdqLvOjZ3DmpP//fWJO3vT531g0TZkulxQGZsA4RDi06F
+EgVQY8ZSFtyK1s0ROOniXuR6jaMk6E7FkE+xvaABXhVjJEg8YBVuNNQ+u6D0p3vd
+Ihw+JS4TgW/3O9N44opl
+=Lh5d
 -----END PGP SIGNATURE-----
