@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=media-gfx/exiv2 dev-qt/qtgui:4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtsql:4 media-gfx/exiv2:= sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Simple but powerful Qt4-based image viewer
-EAPI=4
-HOMEPAGE=http://qt-apps.org/content/show.php/Photo?content=147453
+EAPI=5
+HOMEPAGE=http://photoqt.co.cc/
 KEYWORDS=~amd64
 LICENSE=GPL-2
-RDEPEND=media-gfx/exiv2 dev-qt/qtgui:4
+RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtsql:4 media-gfx/exiv2:=
 SLOT=0
-SRC_URI=http://qt-apps.org/CONTENT/content-files/147453-photo-0.7.1.1.tar.gz
+SRC_URI=http://photoqt.co.cc/pkgs/photo-0.8.tar.gz
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=1e2df8d4ea6d0242d2db554e635a88dd
+_md5_=425afce27c709767408550bf1f89b65d
