@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/photo
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/photo/ChangeLog,v 1.3 2013/03/02 21:39:03 hwoarang Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/photo/ChangeLog,v 1.4 2014/08/19 23:52:12 pesa Exp $
+
+*photo-0.8-r1 (19 Aug 2014)
+
+  19 Aug 2014; Davide Pesavento <pesa@gentoo.org> +photo-0.8-r1.ebuild,
+  -photo-0.7.1.1.ebuild, -photo-0.8.ebuild:
+  EAPI=5; add missing qtsql dep (bug 514586); add slot operator on exiv2 dep.
 
   02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> photo-0.7.1.1.ebuild,
   photo-0.8.ebuild:
